--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 }
 body  {
     background-color: var(--cor-de-fundo);
-    color: var(--branco-principal)
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 * {
     margin: 0;
@@ -28,8 +31,24 @@ body  {
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
+    margin: bottom 1em;
 }
 .botao__secundario {
-    background-color: transparent;
+    background-color: rgb(170, 16, 201);
     border: 2px solid var(--branco-principal);
 }
+.container_aviso{
+    font-size: 12px;
+    color: var(--cinza-secundário);
+}
+.container_titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
+.container_caixa{
+    margin: 0 6em;
+}
+.botao__terciario {
+    background-color: red;
+    border: 2px solid var(--branco-principal);}
